# VkHyperShape

./: CMakeLists.txt  Camera.hpp  README.md  main.cpp  makefile  mglm.hpp  transform.hpp
geometry/: CMakeLists.txt  clifford.cpp  clifford.h  cylinder.cpp  cylinder.h  cylindrical.cpp  cylindrical.h  geometry.cpp  geometry.h  grid.cpp  grid.h  hexadeca.cpp  hexadeca.h  hypersphere.cpp  hypersphere.h  icositetra.cpp  icositetra.h  kleinBottle.cpp  kleinBottle.h  pentatope.cpp  pentatope.h  sixteenCell.cpp  sixteenCell.h  tesseract.cpp  tesseract.h  test.cpp  test.h  twentyFourCell.cpp  twentyFourCell.h
imgui/: CMakeLists.txt
imgui/c/: vulkan.c  vulkan.h
imgui_impl/: CMakeLists.txt  glfw.cpp  glfw.h  vulkan.cpp  vulkan.hpp
include/vma/: vk_mem_alloc.h  vk_mem_alloc.hpp
shaders/: base.frag  base.vert  base.vert.spv  compile.sh  offscreen.frag  offscreen.frag.spv
vulkan/: CMakeLists.txt  buffer.cpp  buffer.hpp  device.cpp  device.hpp  framework.cpp  framework.hpp  image.cpp  image.hpp  pipeline.cpp  pipeline.hpp  pool.cpp  pool.hpp  primitive.cpp  primitive.hpp  queue.cpp  queue.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp
vulkan/c/: PickingTexture.c  PickingTexture.h  Pipeline.h  VulkanBuffer.c  VulkanBuffer.h  VulkanDemo.c  VulkanDemo.h  VulkanDevice.c  VulkanDevice.h  VulkanImage.c  VulkanImage.h  VulkanPool.c  VulkanPool.h  VulkanWindow.c  VulkanWindow.h  camera.h  main.c  vulkanFrame.c  vulkanFrame.h  vulkanPrimitive.c  vulkanPrimitive.h
